--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,6 @@ android {
 
 dependencies {
     def lifecycle_version = "2.3.1"
-    def room_version = "2.3.0"
     def navigation_version = "2.3.5"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -51,13 +50,11 @@ dependencies {
     //Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    //Room
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:2.3.0"
-    androidTestImplementation "androidx.room:room-testing:2.3.0"
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+    //DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
